--- a/src/Smartstore.Web/Views/Shared/Components/FacetGroup/MultiSelect.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/FacetGroup/MultiSelect.cshtml
@@ -13,19 +13,24 @@
     </span>
 </div>
 
-<div class="facet-body-inner" attr-class='(Model.IsScrollable, "scrollable custom-scrollbar")' role="group" aria-labelledby="facet-group-header-@Model.Key">
+<div class="facet-body-inner" attr-class='(Model.IsScrollable, "scrollable custom-scrollbar")' 
+     role="listbox" 
+     aria-multiselectable="true" 
+     aria-orientation="vertical" 
+     aria-labelledby="facet-group-header-@Model.Key">
     @foreach (var facet in facets)
     {
         <div class="facet-item facet-check">
             <label class="facet-control-label">
                 <input class="facet-control-native"
                        type="checkbox"
-                       role="option"
                        id="optcheck-@(facet.Value.Key)"
                        value="@facet.Value.ToString()"
+                       role="option"
+                       aria-selected="@facet.Value.IsSelected.ToString().ToLower()"
                        attr-checked='(facet.Value.IsSelected, "checked")'
                        data-href="@Url.FacetToggle(facet)" />
-                <span class="facet-control-ui"></span>
+                <span class="facet-control-ui" aria-hidden="true"></span>
                 <span class="facet-label has-count" attr-data-count='(facet.HitCount > 0, facet.HitCount.ToString("N0"))'>
                     @(facet.Value.Label ?? facet.Value.ToString())
                 </span>
