--- a/src/Smartstore.Web/Views/Shared/Components/FacetGroup/Rating.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/FacetGroup/Rating.cshtml
@@ -10,16 +10,26 @@
     }
 }
 
-<div class="facet-body-inner facet-body-rating" role="listbox" aria-labelledby="facet-group-header-@Model.Key">
+<div class="facet-body-inner facet-body-rating" 
+     role="listbox"
+     data-manualselect="true"
+     aria-multiselectable="false" 
+     aria-orientation="vertical" 
+     aria-labelledby="facet-group-header-@Model.Key">
     @foreach (var facet in facets)
     {
         <div class="facet-item facet-radio" title="@facet.Value.Label">
-            <label for="optradio-@(facet.Value.Key)">
-                <span class="facet-control-ui" 
-                      tabindex="0" 
-                      role="option" 
-                      aria-selected="@facet.Value.IsSelected.ToString().ToLower()"
-                      aria-label="@(facet.Value.Label ?? facet.Value.ToString())"></span>
+            <label class="choice-box-label" for="optradio-@(facet.Value.Key)">
+                <input class="facet-control-native"
+                       type="radio"
+                       name="optradio-@(Model.Key)"
+                       id="optradio-@(facet.Value.Key)"
+                       value="@facet.Value.ToString()"
+                       role="option"
+                       aria-selected="@facet.Value.IsSelected.ToString().ToLower()"
+                       attr-checked='(facet.Value.IsSelected, "checked")'
+                       data-href="@Url.FacetToggle(facet)" />
+                <span class="facet-control-ui" aria-label="@(facet.Value.Label ?? facet.Value.ToString())"></span>
                 <span class="facet-label has-count" attr-data-count='(facet.HitCount > 0, facet.HitCount.ToString("N0"))'>
                     <span class="rating">
                         <span style="width: @(facet.Value.Value.Convert<int>() * 20)%"></span>
@@ -28,19 +38,5 @@
                 </span>
             </label>
         </div>
-    }
-</div>
-
-<div role="radiogroup">
-    @foreach (var facet in facets)
-    {
-        <input class="facet-control-native sr-only" 
-               type="radio" 
-               tabindex="-1"
-               name="optradio-@(Model.Key)" 
-               id="optradio-@(facet.Value.Key)" 
-               value="@facet.Value.ToString()"
-               attr-checked='(facet.Value.IsSelected, "checked")' 
-               data-href="@Url.FacetToggle(facet)" />
     }
 </div>
