--- a/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.Box.cshtml
+++ b/src/Smartstore.Web/Views/Shared/ChoiceTemplates/Choice.Box.cshtml
@@ -6,7 +6,12 @@
 }
 
 <div class="choice-boxes" id="choice-boxes-@Model.Id">
-    <ul class="choice-box-group" role="radiogroup" attr-aria-required='(Model.IsRequired, "true")'>
+    <ul class="choice-box-group" 
+        role="listbox"      
+        data-manualselect="true"
+        aria-multiselectable="false" 
+        aria-orientation="horizontal"  
+        attr-aria-required='(Model.IsRequired, "true")'>
         @foreach (var item in items)
         {
             string css = null;
@@ -65,11 +70,13 @@
                        id="@(controlId)_@(item.Id)"
                        name="@(controlId)"
                        value="@item.Id"
+                       role="option"
                        aria-label="@label"
+                       aria-selected="@item.IsPreSelected.ToString().ToLower()"
                        attr-checked='(item.IsPreSelected, "checked")'
                        attr-disabled='(item.IsDisabled, "disabled")' />
 
-                <label for="@(controlId)_@(item.Id)" class="choice-box-label">
+                <label class="choice-box-label" for="@(controlId)_@(item.Id)">
                     <span class="choice-box-content tooltip-toggle tooltip-toggle-touch" title="@label">
                         <span class="@elClass" attr-style="(css.HasValue(), css)">
                             <span sm-if="!css.HasValue()" class="choice-box-text">@item.Name</span>
