--- a/src/Smartstore.Web/Views/Newsletter/SubscriptionActivation.cshtml
+++ b/src/Smartstore.Web/Views/Newsletter/SubscriptionActivation.cshtml
@@ -6,7 +6,7 @@
     <div class="page-title">
         <h1>@T("Newsletter.Title")</h1>
     </div>
-    <div class="page-body">
+    <div class="page-body" role="alert">
         <strong>
             @Model.Result
         </strong>
