--- a/src/Smartstore.Web/Views/Shared/Components/FacetGroup/Rating.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/FacetGroup/Rating.cshtml
@@ -11,9 +11,8 @@
 }
 
 <div class="facet-body-inner facet-body-rating" 
-     role="listbox"
+     role="radiogroup"
      data-manualselect="true"
-     aria-multiselectable="false" 
      aria-orientation="vertical" 
      aria-labelledby="facet-group-header-@Model.Key">
     @foreach (var facet in facets)
@@ -25,11 +24,10 @@
                        name="optradio-@(Model.Key)"
                        id="optradio-@(facet.Value.Key)"
                        value="@facet.Value.ToString()"
-                       role="option"
-                       aria-selected="@facet.Value.IsSelected.ToString().ToLower()"
+                       aria-label="@(facet.Value.Label ?? facet.Value.ToString())"
                        attr-checked='(facet.Value.IsSelected, "checked")'
                        data-href="@Url.FacetToggle(facet)" />
-                <span class="facet-control-ui" aria-label="@(facet.Value.Label ?? facet.Value.ToString())"></span>
+                <span class="facet-control-ui" aria-hidden="true"></span>
                 <span class="facet-label has-count" attr-data-count='(facet.HitCount > 0, facet.HitCount.ToString("N0"))'>
                     <span class="rating">
                         <span style="width: @(facet.Value.Value.Convert<int>() * 20)%"></span>
