--- a/src/Smartstore.Web/Views/Shared/Components/FacetGroup/SingleSelect.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/FacetGroup/SingleSelect.cshtml
@@ -3,9 +3,8 @@
 @model FacetGroup
 
 <div class="facet-body-inner" attr-class='(Model.IsScrollable, "scrollable custom-scrollbar")' 
-     role="listbox"
+     role="radiogroup"
      data-manualselect="true"
-     aria-multiselectable="false" 
      aria-orientation="vertical" 
      aria-labelledby="facet-group-header-@Model.Key">
     @foreach (var facet in Model.Facets)
@@ -19,11 +18,9 @@
                            id="optradio-@(facet.Value.Key)"
                            name="optradio-@(Model.Key)"
                            value="@facet.Value.ToString()"
-                           role="option"
-                           aria-selected="@facet.Value.IsSelected.ToString().ToLower()"
                            attr-checked='(facet.Value.IsSelected, "checked")'
                            data-href="@Url.FacetToggle(facet)" />
-                    <span class="facet-control-ui" aria-label="@(facet.Value.Label ?? facet.Value.ToString())"></span>
+                    <span class="facet-control-ui" aria-hidden="true"></span>
                     <span class="facet-label has-count" attr-data-count='(facet.HitCount > 0, facet.HitCount.ToString("N0"))'>
                         @(facet.Value.Label ?? facet.Value.ToString())
                     </span>
